web/src/css/nav.css
header{
  font-family: "NeueHaasGrotesk", Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 14px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  text-transform: uppercase;

  color: #FF0000;
}

nav .nav-box{
  padding-top: 10px;
}

@media (max-width: 768px) {
  header {
    top:16px;
    padding-right: 0px;
  }
  nav .nav-box{
    padding-top: 4px;
    padding-right: 0px;
  }
}


.nav h1,
.nav a {
  @apply uppercase;
}
.flip{
  transform:rotate(180deg);
  -webkit-transform:rotate(180deg);
  -moz-transform:rotate(180deg);
  -o-transform:rotate(180deg);
}
.gradient-to-b3{
	background: linear-gradient(0deg,hsla(0,0%,100%,0),hsla(0,0%,100%,.55) 20%, hsla(0,0%,100%,.75) 40%,hsla(0,0%,100%,.96) 75%,hsla(0,0%,100%,.99));
}

.menu-earth-button {
  width: 16em;
  text-align: left;
}
.earth-svg{
  display: inline-block;
  padding-bottom:2px;
  height: 1.2rem;
}
.earth-svg svg{
  width: auto;
  position: relative;
  top: 3px;
  left:1px;
}
.new-eelam-header{
  top: 1px;
  position: relative;
  padding-left: 1em;
}

/* THIN BANNER */
.marquee {
  position: relative;
  width: 100vw;
  max-width: 100%;
  height: 3rem;
  overflow-x: hidden;
  border-bottom:1px solid black;
  text-align:center;
  background:#ffffff;
}

.marquee-track {
  top: 0.45rem;
  position: relative;
  white-space: nowrap;
  will-change: transform;
  text-align:center;
  line-height: 1.2;
}
.marquee-content{
  line-height:2;
}
.marquee a{
  position:relative;
  top:-1px;
  color:white;
  background:black;
  display:inline-block;
  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.6);
  border-radius:16px;
  margin-left:10px;
  line-height: 1;
  padding: 8px 16px 9px;
}
.marquee-special-break{
  display:none;
}
@keyframes marquee {
  from { transform: translateX(0); }
  to { transform: translateX(-50%); }
}
@media(max-width: 767px){
  
  .info-menu-mobile{
    top:-3px;
  }
  .marquee-content{
 /*   font-size: 13px;*/
    line-height: 1.4;
    padding: 6px 0;
    margin:0 auto;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    margin: 0 10px;
    align-items: center;
  }
 #thin-banner-wrapper{
  display: inline-block;
  max-width: 50%;
 }
  .marquee-content span{
    
    text-align:left;
    display: block;
    vertical-align: top;
  }
  .marquee-special-break{
    display: block;
  }
  .marquee-content a{
    display: inline-block;
    vertical-align: top;
    top:0px;
    margin-left:0;
  }
  .marquee-track{
    top:0;
    white-space: break-spaces;
  }
  .marquee{
    height:auto;
  }

}
@media(max-width: 569px){
.marquee-content{
    font-size: 13px;
  }
}
/* end thin banner */

@media(min-width: 768px){
  .max-w-special{
    max-width:calc(100% - 8rem) !important;
  }

  /*---- WORKS FOR UNDERLINE IN DESKTOP NAV ------*/

  .logo .current-nav-link::after{
    width: 105%;
  }
  .current-nav-link.homes::after{
    width:101%;
  }
  .current-nav-link.about::after{
    left:-1px;
  }
  .current-nav-link::after{
    content: "";
    width: 100%;
    height: 4px;
    position: relative;
    top: -4px;
    display: block;
    /* box-shadow: 0 2.5px 0px 0px #FF0000; */
    padding-bottom: 0.3125rem;
    padding-right: 20px;
    border-bottom: 3px solid #FF0000;
  }

}
/*---- WORKS FOR UNDERLINE IN MOBILE NAV------*/
.logo .current-nav-link::after{
  width: 105%;
}
.current-nav-link.homes::after{
  width:101%;
}
.current-nav-link.about::after{
  left:-1px;
}
.current-nav-link::after{
  content: "";
  width: 100%;
  height: 4px;
  position: relative;
  top: -4px;
  display: block;
  /* box-shadow: 0 2.5px 0px 0px red; */
  padding-bottom: 0.3125rem;
  padding-right: 20px;
  border-bottom: 3px solid #FF0000;
}

.sub-menu{

  top:-5px;
  max-height:38px;
  overflow:hidden;
}

.sub-menu.myanimate{
  animation:openAnimation;
  animation-duration: 1s;
  overflow:hidden;
  transition:2s;
  animation-fill-mode: forwards;
  animation-iteration-count: 1;
}
footer{
  font-family: "NeueHaasGrotesk", Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 14px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  text-transform: uppercase;

  color: #FF0000;
}
@media (max-width: 768px) {
  footer li{
    padding-right: 1rem;
  }
}
.sub-menu > div{
  pointer-events: none;
}
.sub-menu > div:first-child{
  pointer-events: auto;
}
.sub-menu.myanimate >div{
  pointer-events: auto;
}
.sub-menu.myanimate >div:first-child{
  pointer-events: auto;
}
.sub-menu.noanimate{
  animation:closeAnimation;
  animation-duration: 0.5s;
  overflow:hidden;
  transition:1s;
  animation-fill-mode: forwards;
  animation-iteration-count: 1;
}

@keyframes openAnimation {
  from { max-height: 38px; }
  to { max-height: 1000px; height:auto; }
}
@keyframes closeAnimation {
  from { max-height: 500px; height:auto; }
  to { max-height: 38px; }
}
.animate-in {
  animation-fill-mode: forwards;
  animation-delay: 1s;
}
@media(min-width: 768px){
  .sub-menu{
    right:5px;
  }
}


@media(max-width: 1024px){
  .gradient-to-b3.top-0{
    top:-5px !important;
  }
}

.gradient-to-b2 {
  /* background: rgb(255, 255, 255); */
  background: transparent;
}


@media(max-width:767px){

  .gradient-to-b2 {
    /* background: rgb(255, 255, 255); */
    background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0) 0%,
      rgba(255, 255, 255, 0.95) 45%,
      rgba(255, 255, 255, 0.98) 75%,
      rgba(255, 255, 255, 1) 100%
    );
  }
}
.gradient-to-b {
  /* background: rgb(255, 255, 255); */
  background: linear-gradient(
    0deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.95) 45%,
    rgba(255, 255, 255, 0.98) 75%,
    rgba(255, 255, 255, 1) 100%
  );
}

